fix overflowing images in tutorial

--- a/tutorial/sass/style.scss
+++ b/tutorial/sass/style.scss
@@ -14,7 +14,7 @@ img {
   display: block;
   margin: 0 auto;
   max-height: 225px;
-  max-width: 960px;
+  max-width: 100%;
   width: auto;
   height: auto;
 }
